# Wifibot-Project-5A

./: InstallGuide.md  Projet 5A.docx  README.md
install/: local_setup.sh  setup.sh
install/arbotix/share/arbotix/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arbotix/share/arbotix/cmake/: arbotixConfig.cmake
install/arbotix_controllers/share/arbotix_controllers/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/arbotix_controllers/share/arbotix_controllers/cmake/: arbotix_controllersConfig.cmake
install/arbotix_firmware/share/arbotix_firmware/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arbotix_msgs/include/arbotix_msgs/arbotix_msgs/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h
install/arbotix_msgs/include/arbotix_msgs/arbotix_msgs/srv/: enable.h  set_speed.h  setup_channel.h  setup_channel.hpp
install/arbotix_msgs/share/ament_index/resource_index/rosidl_interfaces/: arbotix_msgs
install/arbotix_msgs/share/arbotix_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arbotix_msgs/share/arbotix_msgs/cmake/: ament_cmake_export_targets-extras.cmake  arbotix_msgsConfig.cmake  arbotix_msgs__rosidl_typesupport_cExport-noconfig.cmake  arbotix_msgs__rosidl_typesupport_cppExport.cmake  arbotix_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  export_arbotix_msgs__rosidl_generator_cExport-noconfig.cmake  export_arbotix_msgs__rosidl_generator_cppExport.cmake  export_arbotix_msgs__rosidl_generator_pyExport-noconfig.cmake  export_arbotix_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_arbotix_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_arbotix_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake
install/arbotix_msgs/share/arbotix_msgs/msg/: Digital.idl
install/arbotix_msgs/share/arbotix_msgs/srv/: Enable.idl  Relax.idl  SetSpeed.idl  SetupChannel.idl
install/arbotix_python/share/arbotix_python/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/arbotix_sensors/share/arbotix_sensors/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/joy2twist/lib/joy2twist/: joy2twist
install/joy2twist/share/joy2twist/: package.sh
install/lib_wifibot/share/ament_index/resource_index/parent_prefix_path/: lib_wifibot
install/lib_wifibot/share/lib_wifibot/: local_setup.dsv  package.sh  package.zsh
install/lib_wifibot/share/lib_wifibot/cmake/: lib_wifibotExport-noconfig.cmake
install/roswifibot/lib/roswifibot/: roswifibot_node
install/roswifibot/share/ament_index/resource_index/package_run_dependencies/: roswifibot
install/roswifibot/share/ament_index/resource_index/parent_prefix_path/: roswifibot
install/roswifibot/share/roswifibot/: package.dsv  package.sh  package.xml
install/roswifibot/share/roswifibot/cmake/: ament_cmake_export_include_directories-extras.cmake  roswifibotConfig.cmake
install/roswifibot/share/roswifibot/launch/: joy_teleop.launch  robot_launch.py
install/wifibot_msgs/include/wifibot_msgs/wifibot_msgs/msg/: rosidl_typesupport_introspection_c__visibility_control.h
install/wifibot_msgs/share/ament_index/resource_index/parent_prefix_path/: wifibot_msgs
install/wifibot_msgs/share/wifibot_msgs/: local_setup.sh  package.dsv  package.sh
install/wifibot_msgs/share/wifibot_msgs/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  export_wifibot_msgs__rosidl_generator_cExport-noconfig.cmake  export_wifibot_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  wifibot_msgs__rosidl_typesupport_introspection_cExport.cmake  wifibot_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake
log/: latest_build
src/Test_pkg/: CMakeLists.txt  package.xml
src/Test_pkg/config/: test.yaml
src/Test_pkg/launch/: TEST_launch.launch  test_launch.py
src/arbotix/: CMakeLists.txt
src/arbotix_controllers/: CMakeLists.txt
src/arbotix_firmware/: CMakeLists.txt
src/arbotix_msgs/: CMakeLists.txt
src/arbotix_python/: CMakeLists.txt  package.xml  setup.py
src/arbotix_python/src/arbotix_python/: diff_controller.py  follow_controller.py  io.py  joints.py  linear_controller.py  publishers.py  servo_controller.py
src/arbotix_sensors/: CMakeLists.txt  setup.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/joy2twist/lib/joy2twist/: joy2twist
src/install/joy2twist/share/joy2twist/: local_setup.sh  package.sh
src/install/lib_wifibot/share/lib_wifibot/: package.bash  package.dsv  package.ps1  package.sh  package.xml
src/install/lib_wifibot/share/lib_wifibot/cmake/: lib_wifibotExport.cmake
src/install/roswifibot/share/roswifibot/: package.bash  package.ps1  package.sh  package.zsh
src/install/wifibot_msgs/share/wifibot_msgs/: local_setup.dsv  package.bash  package.ps1  package.sh  package.zsh
src/install/wifibot_msgs/share/wifibot_msgs/cmake/: export_wifibot_msgs__rosidl_generator_cExport.cmake  export_wifibot_msgs__rosidl_generator_pyExport.cmake  export_wifibot_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  wifibot_msgsConfig.cmake  wifibot_msgs__rosidl_typesupport_cppExport-noconfig.cmake
src/install/wifibot_msgs/share/wifibot_msgs/msg/: Status.msg
src/lib_wifibot/: CMakeLists.txt
src/lib_wifibot/src/: libwifibot.cpp
src/log/: latest_build
src/roswifibot/: CMakeLists.txt
src/roswifibot/config/: wifibot.yaml
src/roswifibot/launch/: joy_teleop_launch.py  robot_launch.launch
src/roswifibot/scripts/: wifibot_teleop_joy.py
src/roswifibot/src/: wifibot.cpp  wifibot.h
src/wifibot_msgs/: CMakeLists.txt
(+60 files in other folders)
