<package format="3">
  <name>arbotix_python</name>
  <version>0.11.0</version>
  <description>
    Bindings and low-level controllers for ArbotiX-powered robots.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/arbotix_python</url>
  
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>tf2</depend>
  <depend>arbotix_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>control_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib</depend>
  <depend>python3-serial</depend>
  <depend>tf2_geometry_msgs</depend>

	<build_depend>rosidl_default_generators</build_depend>
	<exec_depend>rosidl_default_runtime</exec_depend>
	<member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
